# twitchchat

./: .gitignore  Cargo.toml  README.md
src/: codec.rs  config.rs  credentials.rs  irc_chat.rs  lib.rs  logger.rs  main.rs  message.rs  twitch.rs  utils.rs
