[package]
name = "twitchchat"
version = "0.5.0"
authors = ["jjwp28 <slay3r28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1.4.2"
gh-emoji = "1.0.3"
rand = "0.8.2"
serde = { version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
crossterm = "0.19.0"

[dependencies.reqwest]
version = "0.11.0"
default-features = true
features =["blocking", "json"]